force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/GLB_P1_ParticipanteOportunidad__c.object-meta.xml
<CustomObject>
    <label>Participante de la oportunidad</label>
    <nameField>
        <displayFormat>PART-{000000}</displayFormat>
        <label>Nombre de Participante de la Oportunidad</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes de la oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>