force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/fields/GLB_P1_Activo__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>