force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/fields/GLB_P1_FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaCreacion__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>