force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/fields/GLB_P1_FechaUltimaModificaci_n__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaUltimaModificaci_n__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de última modificación</label>
    <type>Date</type>
</CustomField>