force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/fields/GLB_P1_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Participantes de la oportunidad</relationshipLabel>
    <relationshipName>Participantes_de_la_oportunidad</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>