force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/fields/GLB_P1_Participante__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Participante__c</fullName>
    <label>Participante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participantes de la oportunidad</relationshipLabel>
    <relationshipName>Participantes_de_la_oportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>