force-app/main/default/objects/GLB_P1_ParticipanteOportunidad__c/fields/GLBP1_RelacionParticipante__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_RelacionParticipante__c</fullName>
    <label>Relación del participante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conyuge</fullName>
                <label>Cónyuge</label>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Hermano_a</fullName>
                <label>Hermano(a)</label>
            </value>
            <value>
                <fullName>Hijo_a</fullName>
                <label>Hijo(a)</label>
            </value>
            <value>
                <fullName>Madre</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Padre</fullName>
            </value>
            <value>
                <fullName>Primo_a</fullName>
                <label>Primo(a)</label>
            </value>
            <value>
                <fullName>Tio_a</fullName>
                <label>Tío(a)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>